# sdl-cmake

./: CMakeLists.txt
src/: main.cpp
